--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   <name>restbackend</name>
   <description>BackendRestApplication project for Spring Boot</description>
   <properties>
-    <java.version>11</java.version>
+    <java.version>1.8</java.version>
   </properties>
   <dependencies>
     <dependency>
@@ -63,6 +63,11 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>com.heroku.sdk</groupId>
+        <artifactId>heroku-maven-plugin</artifactId>
+        <version>2.0.16</version>
       </plugin>
     </plugins>
   </build>
