implementando MockEmailService com Logger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-spring.profiles.active=dev
+spring.profiles.active=test
 spring.jpa.open-in-view=true
+
+default.sender=georgemattos@gmail.com
+default.recipient=georgemattos@gmail.com
