Envio de email concluido via smtp do google

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 spring.jpa.open-in-view=true
 
-default.sender=georgemattos@gmail.com
-default.recipient=georgemattos@gmail.com
+default.sender=javarbt@gmail.com
+default.recipient=javarbt@gmail.com
