Implementando autenticacao e token JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.jpa.open-in-view=true
 
 default.sender=javarbt@gmail.com
 default.recipient=javarbt@gmail.com
+
+jwt.secret=SequenciaDeCarateresParaAssinarTokens
+jwt.expiration=60000
