--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/java_rest_ionic
-spring.datasource.username=dev
-spring.datasource.password=123456
+spring.datasource.username=admin
+spring.datasource.password=*_senha_Admin2020
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
