--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,9 @@ default.sender=javarbt@gmail.com
 default.recipient=javarbt@gmail.com
 
 jwt.secret=SequenciaDeCarateresParaAssinarTokens
-jwt.expiration=60000
+jwt.expiration=86400000
+
+aws.access_key_id=
+aws.secret_access_key=
+s3.bucket=curso-spring-ionic-george-dev
+s3.region=sa-east-1
