--- a/src/main/java/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/java/META-INF/additional-spring-configuration-metadata.json
@@ -39,6 +39,11 @@
       "name": "s3.region",
       "type": "java.lang.String",
       "description": "A description for 's3.region'"
+    },
+    {
+      "name": "img.prefix.client.profile",
+      "type": "java.lang.String",
+      "description": "A description for 'img.prefix.client.profile'"
     }
   ]
 }
