--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,6 @@ aws.access_key_id=
 aws.secret_access_key=
 s3.bucket=curso-spring-ionic-george-dev
 s3.region=sa-east-1
+
 img.prefix.client.profile=cp
+img.profile.size=200
